Fix scoping the style of header on mobile and tablet

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,6 +1,7 @@
 @import '../base';
 
-html.touch {
+html.mobile,
+html.tablet {
 
   #header {
     $header_inner_height: 44px;
